--- a/mi_cartera_js/templates/index.html
+++ b/mi_cartera_js/templates/index.html
@@ -1,14 +1,10 @@
-<!-- Comando magico es doc y tabulador para crear la estructura basica html -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Probatinas SPA</title>
     <link rel="stylesheet" href="/static/css/pico.css">
-    <script src ="/static/js/app.js"></script> <!-- Aqui lo estamos metiendo en una plantilla, como css, en vez de hacerlo aqui asi: 
-    <script>
-        alert("Hola, mundo")
-    </script>-->
+    <script src ="/static/js/app.js"></script> 
 </head>
 <body class="container">
     <h1>Pagina de prueba</h1>
@@ -17,11 +13,12 @@
             <label for="texto">Introduce un texto</label>
             <input type="text" name="texto" id="texto">
         </div>
-        <div>
+        <div class="grid">
             <button id="btnSubmit">Crear</button>
+            <button id="btnDelete">Borrar ultimo</button>
         </div>
     </form>
-    <section id="parrafos"><!-- Comando magico para poner la id section#parrafos y tabulador -->
+    <section id="contenido">
 
     </section>
 </body>
