--- a/mi_cartera_js/templates/index.html
+++ b/mi_cartera_js/templates/index.html
@@ -2,24 +2,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Probatinas SPA</title>
-    <link rel="stylesheet" href="/static/css/pico.css">
-    <script src ="/static/js/app.js"></script> 
+    <link rel="stylesheet" href="/static/css/pico.css"> <!--añadimos una barra delante para decirle que tiene que mirar desde el directorio raiz, no desde la ruta donde estamos-->
+    <link rel="stylesheet" href="/static/css/style.css">
+    <title>Mi Cartera - {{ title }}</title> <!--Anadimos una variable y entonces se la pasamos cuando hacemos el render_template -->
+    <script src="/static/js/app.js"></script>
 </head>
-<body class="container">
-    <h1>Pagina de prueba</h1>
-    <form>
-        <div>
-            <label for="texto">Introduce un texto</label>
-            <input type="text" name="texto" id="texto">
-        </div>
-        <div class="grid">
-            <button id="btnSubmit">Crear</button>
-            <button id="btnDelete">Borrar ultimo</button>
-        </div>
-    </form>
-    <section id="contenido">
-
+<body>
+    <header>
+        <p class="container">Mi cartera</p>
+    </header>
+    <section class="container">
+        <h1>Movimientos</h1>
+        <table id="table_movements">
+            <tr>
+                <th>Fecha</th>
+                <th>Concepto</th>
+                <th>Importe</th>
+                <th>Moneda</th>
+            </tr>
+        </table>
     </section>
+    <footer>
+        <p>&copy; Iv3tt3</p>
+    </footer>
 </body>
+
 </html>
